route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-sample
spec:
  to:
    kind: Service
    name: nodejs-sample
  port:
    targetPort: 8080
